# internal/delivery/http/requests/complaint.go
@@ -1,13 +1,9 @@
 package requests
 
 type CreateComplaintRequest struct {
-	Title       string  `json:"title" binding:"required"`
-	Description *string `json:"description,omitempty"`
-	Category    *string `json:"category,omitempty"`
+	Title string `json:"title" binding:"required"`
 }
 
 type UpdateComplaintRequest struct {
-	Title       string  `json:"title" binding:"required"`
-	Description *string `json:"description,omitempty"`
-	Category    *string `json:"category,omitempty"`
+	Title string `json:"title" binding:"required"`
 }
